--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <img src="images/BusTicketslogo.svg" alt="Logo del sitio">
             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="pills-tickets-tab" data-bs-toggle="pill"
+                    <button class="nav-link active" id="pills-tickets-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-tickets" type="button" role="tab" aria-controls="pills-tickets"
                         aria-selected="true">Boletería <i class="icon-ticket"></i></button>
                 </li>
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="pills-administration-tab" data-bs-toggle="pill"
+                    <button class="nav-link" id="pills-administration-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-administration" type="button" role="tab"
                         aria-controls="pills-administration" aria-selected="false">Administración <i
                             class="icon-equalizer2"></i></button>
@@ -38,7 +38,7 @@
 
     <main class="tab-content" id="pills-tabContent">
         <!-- CONTENEDOR SECTION register-tickets -->
-        <div class="tab-pane fade" id="pills-tickets" role="tabpanel" aria-labelledby="pills-tickets-tab">
+        <div class="tab-pane fade show active" id="pills-tickets" role="tabpanel" aria-labelledby="pills-tickets-tab">
 
             <section id="register-tickets" class="container">
                 <div class="grid-layout">
@@ -51,19 +51,19 @@
                                     <label for="">
                                         <h4>Nombre Pasajero</h4>
                                     </label>
-                                    <input type="text" placeholder="Ingresa el nombre">
+                                    <input type="text" id="userNameInput" placeholder="Ingresa el nombre">
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Apellido Pasajero</h4>
                                     </label>
-                                    <input type="text" placeholder="Ingresa el apellido">
+                                    <input type="text" id="userLastNameInput" placeholder="Ingresa el apellido">
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Documento Identidad Pasajero</h4>
                                     </label>
-                                    <input type="text" placeholder="Ingresa el n° documento">
+                                    <input type="text" id="userIdInput" placeholder="Ingresa el n° documento">
                                 </div>
                             </div>
                             <div class="row">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                             <div class="button-panel">
-                                <button class="g-btn">Registrar</button>
+                                <a class="g-btn" id="register-ticket-btn">Registrar</a>
                             </div>
                         </form>
                     </article>
@@ -174,7 +174,7 @@
         </div>
 
         <!-- CONTENEDOR SECTION ADMINISTRACION -->
-        <div class="tab-pane fade show active" id="pills-administration" role="tabpanel"
+        <div class="tab-pane fade" id="pills-administration" role="tabpanel"
             aria-labelledby="pills-administration-tab">
             <!-- ADMINISTRACION DE INFORMACION DEL SITIO -->
             <section id="info-administration" class="container">
@@ -530,6 +530,7 @@
     <script src="js/vehicles.js" type="text/javascript"></script>
     <script src="js/routes.js" type="text/javascript"></script>
     <script src="js/scheduledTrips.js" type="text/javascript"></script>
+    <script src="js/users.js" type="text/javascript"></script>
     <script src="js/tickets.js" type="text/javascript"></script>
 
 
