--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
                                     <label for="">
                                         <h4>Salida</h4>
                                     </label>
-                                    <input type="text" placeholder="Lugar de Salida" readonly>
+                                    <input type="text" id="showDepartureInput" placeholder="Lugar de Salida" readonly>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
                                     <label for="">
                                         <h4>Destino</h4>
                                     </label>
-                                    <input type="text" placeholder="Lugar de Destino" readonly>
+                                    <input type="text" id="showDestinationInput" placeholder="Lugar de Destino" readonly>
                                 </div>
                             </div>
                             <div class="row">
@@ -95,11 +95,11 @@
                                 <div class="col-sm-12 col-md-6">
                                     <div class="cost-details">
                                         <label for="">Pasaje</label>
-                                        <input type="text" placeholder="0$" readonly>
+                                        <input type="text" id="showCostInput" placeholder="0$" readonly>
                                     </div>
                                     <div class="cost-details">
                                         <label for="">IVA</label>
-                                        <input type="text" placeholder="0$" readonly>
+                                        <input type="text" id="showTaxesInput" placeholder="0$" readonly>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-6">
@@ -107,7 +107,7 @@
                                         <label for="">
                                             <h4>Total</h4>
                                         </label>
-                                        <input type="text" placeholder="0$" readonly>
+                                        <input type="text" id="showTotalInput" placeholder="0$" readonly>
                                     </div>
                                 </div>
                             </div>
