--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
     </header>
 
+    <!-- Notificaiones -->
     <div id="notification">
     </div>
-
     <main class="tab-content" id="pills-tabContent">
         <!-- CONTENEDOR SECTION register-tickets -->
         <div class="tab-pane fade show active" id="pills-tickets" role="tabpanel" aria-labelledby="pills-tickets-tab">
@@ -87,7 +87,8 @@
                                     <label for="">
                                         <h4>Destino</h4>
                                     </label>
-                                    <input type="text" id="showDestinationInput" placeholder="Lugar de Destino" readonly>
+                                    <input type="text" id="showDestinationInput" placeholder="Lugar de Destino"
+                                        readonly>
                                 </div>
                                 <div class="col-sm-12 col-md-4">
                                     <label for="">
@@ -127,7 +128,7 @@
                         <h2 class="title-section">Resumen</h2>
                         <div class="row text-center mt-5">
                             <div class="col-6">
-                                <div id="sold-tickets-value" class=" show-value">0</div>
+                                <div id="sold-tickets-value" class="show-value">0</div>
                                 <label for="">Tickets Vendidos</label>
                             </div>
                             <div class="col-6">
@@ -148,8 +149,7 @@
         </div>
 
         <!-- CONTENEDOR SECTION ADMINISTRACION -->
-        <div class="tab-pane fade" id="pills-administration" role="tabpanel"
-            aria-labelledby="pills-administration-tab">
+        <div class="tab-pane fade" id="pills-administration" role="tabpanel" aria-labelledby="pills-administration-tab">
             <!-- ADMINISTRACION DE INFORMACION DEL SITIO -->
             <section id="info-administration" class="container">
                 <div class="g-basic-card">
@@ -195,10 +195,13 @@
                                         <h2 class="title-section mt-5 mt-lg-0">Información de Viaje</h2>
                                         <nav class="g-action-button-panel">
                                             <ul>
-                                                <li><a id="new-trip-btn" class="btn active">Nuevo<i class="icon-file-text2"></i>
+                                                <li><a id="new-trip-btn" class="btn active">Nuevo<i
+                                                            class="icon-file-text2"></i>
                                                     </a></li>
-                                                <li><a id="edit-trip-btn" class="btn">Editar<i class="icon-pencil"></i></a></li>
-                                                <li><a id="save-trip-btn" class="btn">Guardar<i class="icon-floppy-disk"></i></a>
+                                                <li><a id="edit-trip-btn" class="btn">Editar<i
+                                                            class="icon-pencil"></i></a></li>
+                                                <li><a id="save-trip-btn" class="btn">Guardar<i
+                                                            class="icon-floppy-disk"></i></a>
                                                 </li>
                                             </ul>
                                         </nav>
@@ -209,7 +212,8 @@
                                                 <label for="">
                                                     <h4>Fecha del Viaje</h4>
                                                 </label>
-                                                <input type="date" name="" id="tripDateInput" disabled autocomplete="off">
+                                                <input type="date" name="" id="tripDateInput" disabled
+                                                    autocomplete="off">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -243,7 +247,8 @@
                                                 <label for="">
                                                     <h4>Costo del Pasaje</h4>
                                                 </label>
-                                                <input id="tripCostInput" type="text" placeholder="Ingrese el monto" disabled autocomplete="off">
+                                                <input id="tripCostInput" type="text" placeholder="Ingrese el monto"
+                                                    disabled autocomplete="off">
                                             </div>
                                         </div>
                                     </form>
@@ -495,6 +500,29 @@
                 </div>
             </section>
         </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="modalTicket" tabindex="-1" aria-labelledby="modalTicketLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalTicketLabel">Ticket</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <table id="table-printTickets" class="table table-striped text-left mt-5">
+                            <tbody>
+                                
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Imprimir</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <script src="js/jquery-3.6.0.min.js" type="text/javascript"></script>
     <script src="js/classes.js" type="text/javascript"></script>
@@ -514,9 +542,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
